--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Our own
+test_dir/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -205,3 +208,4 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+test_dir/root_Stormea_file.rs
